Source/env/ArmCrossCompiled/Plugins/Time.o.log
Plugins/Time.cpp:7:26: error: ‘void BBP::std::initClock()’ should have been declared inside ‘BBP::std’
    7 | void BBP::std::initClock()
      |                          ^
Plugins/Time.cpp: In function ‘void BBP::std::initClock()’:
Plugins/Time.cpp:9:24: error: ‘now_micros’ was not declared in this scope
    9 |  startup_time_micros = now_micros();
      |                        ^~~~~~~~~~
Plugins/Time.cpp:10:24: error: ‘now_millis’ was not declared in this scope
   10 |  startup_time_millis = now_millis();
      |                        ^~~~~~~~~~
Plugins/Time.cpp: At global scope:
Plugins/Time.cpp:13:39: error: ‘BBP::std::time_t BBP::std::now_millis()’ should have been declared inside ‘BBP::std’
   13 | BBP::std::time_t BBP::std::now_millis()
      |                                       ^
Plugins/Time.cpp:18:39: error: ‘BBP::std::time_t BBP::std::now_micros()’ should have been declared inside ‘BBP::std’
   18 | BBP::std::time_t BBP::std::now_micros()
      |                                       ^
Plugins/Time.cpp:23:35: error: ‘BBP::std::time_t BBP::std::millis()’ should have been declared inside ‘BBP::std’
   23 | BBP::std::time_t BBP::std::millis()
      |                                   ^
Plugins/Time.cpp:28:35: error: ‘BBP::std::time_t BBP::std::micros()’ should have been declared inside ‘BBP::std’
   28 | BBP::std::time_t BBP::std::micros()
      |                                   ^
Plugins/Time.cpp:33:41: error: ‘void BBP::std::delay(BBP::std::time_t)’ should have been declared inside ‘BBP::std’
   33 | void BBP::std::delay(std::time_t _millis)
      |                                         ^
Plugins/Time.cpp: In function ‘void BBP::std::delay(BBP::std::time_t)’:
Plugins/Time.cpp:35:26: error: ‘millis’ is not a member of ‘BBP::std’; did you mean ‘BBP::std::millis’?
   35 |  time_t _now = BBP::std::millis();
      |                          ^~~~~~
Plugins/Time.cpp:23:18: note: ‘BBP::std::millis’ declared here
   23 | BBP::std::time_t BBP::std::millis()
      |                  ^~~
Plugins/Time.cpp:36:36: error: ‘millis’ is not a member of ‘BBP::std’; did you mean ‘BBP::std::millis’?
   36 |  while (_now + _millis > BBP::std::millis());
      |                                    ^~~~~~
Plugins/Time.cpp:23:18: note: ‘BBP::std::millis’ declared here
   23 | BBP::std::time_t BBP::std::millis()
      |                  ^~~
